--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+#Tue May 28 07:04:58 CST 2024
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
@@ -7,27 +8,17 @@ application.title=Server
 application.vendor=franc
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
+debug.classpath=${run.classpath}
+debug.modulepath=${run.modulepath}
+debug.test.classpath=${run.test.classpath}
+debug.test.modulepath=${run.test.modulepath}
 dist.archive.excludes=
-# This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -43,36 +34,34 @@ file.reference.javafx.graphics.jar=lb\\javafx.graphics.jar
 file.reference.javafx.media.jar=lb\\javafx.media.jar
 file.reference.javafx.swing.jar=lb\\javafx.swing.jar
 file.reference.javafx.web.jar=lb\\javafx.web.jar
+file.reference.jlayer-1.0.1.4.jar=lb/jlayer-1.0.1.4.jar
+file.reference.jna-jpms-5.12.1.jar=lb/jna-jpms-5.12.1.jar
+file.reference.jna-platform-jpms-5.12.1.jar=lb/jna-platform-jpms-5.12.1.jar
+file.reference.junit-3.8.2.jar=lb/junit-3.8.2.jar
 file.reference.lb-javafx-jmods-22.0.1=lb\\javafx-jmods-22.0.1
+file.reference.pdfbox-app-2.0.31.jar=lb/pdfbox-app-2.0.31.jar
+file.reference.vlcj-4.8.2.jar=lb/vlcj-4.8.2.jar
+file.reference.vlcj-natives-4.8.1.jar=lb/vlcj-natives-4.8.1.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=\
-    ${file.reference.javafx.base.jar}:\
-    ${file.reference.javafx.controls.jar}:\
-    ${file.reference.javafx.fxml.jar}:\
-    ${file.reference.javafx.graphics.jar}:\
-    ${file.reference.javafx.media.jar}:\
-    ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}:\
-    ${file.reference.javafx-swt.jar}:\
-    ${file.reference.lb-javafx-jmods-22.0.1}
-# Space-separated list of extra javac options
+jar.index=${jnlp.enabled}
+javac.classpath=${file.reference.vlcj-natives-4.8.1.jar}\:${file.reference.vlcj-4.8.2.jar}\:${file.reference.javafx.base.jar}\:${file.reference.jna-platform-jpms-5.12.1.jar}\:${file.reference.jna-jpms-5.12.1.jar}\:${file.reference.javafx.controls.jar}\:${file.reference.javafx.fxml.jar}\:${file.reference.javafx.graphics.jar}\:${file.reference.javafx.media.jar}\:${file.reference.javafx.swing.jar}\:${file.reference.javafx.web.jar}\:${file.reference.javafx-swt.jar}\:${file.reference.lb-javafx-jmods-22.0.1}\:${file.reference.pdfbox-app-2.0.31.jar}\:${file.reference.jlayer-1.0.1.4.jar}\:${file.reference.junit-3.8.2.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
+javac.processorpath=${javac.classpath}
 javac.source=12
 javac.target=12
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+javac.test.modulepath=${javac.modulepath}
+javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -85,31 +74,34 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-# The jlink additional root modules to resolve
 jlink.additionalmodules=
-# The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Server
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+junit.selected.version=3
 main.class=server.Server
+manifest.custom.application.library.allowable.codebase=
+manifest.custom.caller.allowable.codebase=
+manifest.custom.codebase=
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
+run.classpath=${javac.classpath}\:${build.classes.dir}
 run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
+run.modulepath=${javac.modulepath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.modulepath=${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
